--- a/src/app/modules/user-management/user-management.component.html
+++ b/src/app/modules/user-management/user-management.component.html
@@ -3,7 +3,7 @@
         <form class="col-md-12 d-flex justify-content-between align-items-center" [formGroup]="searchForm">
             <input class="form-control col-md-10" placeholder="Nhập tên người dùng"
                 formControlName="name" style="height: 38px;margin-right: 4px;">
-            <button class="btn col-md-2 btn-primary" (click)="getAllUser()"><i class="nc-icon nc-zoom-split"></i> Tìm
+            <button class="btn col-md-2 btn-primary" (click)="getUsers()"><i class="nc-icon nc-zoom-split"></i> Tìm
                 kiếm</button>
         </form>
        
@@ -26,24 +26,20 @@
                     <tr>
                         <th style="background: #beb6b6; text-align: center;" scope="col">#</th>
                         <th style="background: #beb6b6; text-align: center;" scope="col">Họ và tên</th>
-                        <th style="background: #beb6b6; text-align: center;" scope="col">Tên đăng nhập</th>
                         <th style="background: #beb6b6; text-align: center;" scope="col">Địa chỉ</th>
                         <th style="background: #beb6b6; text-align: center;" scope="col">Số điện thoại</th>
-                        <th style="background: #beb6b6; text-align: center;" scope="col">Trạng thái</th>
                         <th style="background: #beb6b6; text-align: center;" scope="col">Vai trò</th>
-                        <th style="background: #beb6b6; text-align: center;" scope="col">Thao tác</th>
+                        <!-- <th style="background: #beb6b6; text-align: center;" scope="col">Thao tác</th> -->
                     </tr>
                 </thead>
-                <tbody>
+                <tbody *ngIf="listUser.length > 0">
                     <tr *ngFor="let item of listUser; index as i">
                         <td style="text-align: center;" scope="row">{{i+1}}</td>
-                        <td style="text-align: center;">{{item?.fullName}}</td>
-                        <td style="text-align: center;">{{item?.username}}</td>
+                        <td style="text-align: center;">{{item?.name}}</td>
                         <td style="text-align: center;">{{item?.address}}</td>
-                        <td style="text-align: center;">{{item?.mobile}}</td>
-                        <td style="text-align: center;">{{item?.status?item?.status == 1?'Hoạt động':'Không hoạt động':'Không hoạt động'}}</td>
-                        <td style="text-align: center;">{{item?.isHost? item?.isAdmin?'Quản trị':'Chủ trọ' :'Nguời thuê'}}</td>
-                        <td>
+                        <td style="text-align: center;">{{item?.phone}}</td>
+                        <td style="text-align: center;">{{item?.role}}</td>
+                        <!-- <td>
                             <div class="d-flex justify-content-center" *ngIf="item?.isAdmin">
                                 <button title="Kích hoạt tài khoản" style="background: transparent; border: none;" *ngIf="item.status === 0 || !item.status" (click)="updateUser(item,1)"><i
                                         style="font-size: 20px; color: #01904a;"
@@ -52,13 +48,15 @@
                                         style="font-size: 20px; color: #ff0000;"
                                         class="fas fa-ban"></i></button>
                             </div>
-                        </td>
+                        </td> -->
                     </tr>
+                    
                 </tbody>
+                <!-- <div *ngIf="listUser.length <= 0" style="margin-left: auto;margin-right: auto;font-size: 24px;font-weight: 500;margin-bottom: 40px;">
+                    Không có dữ liệu
+                </div> -->
             </table>
-            <div *ngIf="listUser.length <= 0" style="margin-left: auto;margin-right: auto;font-size: 24px;font-weight: 500;margin-bottom: 40px;">
-                Không có dữ liệu
-            </div>
+            
         </div>
         <!-- <div class="d-flex justify-content-center">
             <nav aria-label="Page navigation example">
