--- a/src/app/modules/user-management/popup-register/popup-register.component.html
+++ b/src/app/modules/user-management/popup-register/popup-register.component.html
@@ -5,7 +5,7 @@
 <div>
 </div>
 <div class="col-md-12 mt-2">
-    <div *ngIf="!isShowOtp">
+    <!-- <div *ngIf="!isShowOtp">
         <form [formGroup]="registerForm">
             <label>Số điện thoại</label>
             <span class="text-danger">(*)</span>
@@ -24,8 +24,8 @@
                 </small>
             </div>
         </form>
-    </div>
-    <div *ngIf="isShowOtp && !isShowRegister">
+    </div> -->
+    <!-- <div *ngIf="isShowOtp && !isShowRegister">
         <form [formGroup]="otpForm">
             <label>Mã OTP</label>
             <span class="text-danger">(*)</span>
@@ -40,14 +40,14 @@
                 </small>
             </div>
         </form>
-    </div>
+    </div> -->
     <div *ngIf="isShowRegister" class="form-group card-body" (ngSubmit)="register()">
         <label>Họ và tên</label><br>
         <input class="form-control" placeholder="Nhập họ và tên" [(ngModel)]="registerInfo.name"><br>
         <label>Địa chỉ</label><br>
         <input class="form-control" placeholder="Nhập địa chỉ" [(ngModel)]="registerInfo.address"><br>
         <label>Số điện thoại</label><br>
-        <input class="form-control w-100" placeholder="Nhập số điện thoại" disabled [(ngModel)]="registerInfo.phone">
+        <input class="form-control w-100" placeholder="Nhập số điện thoại" [(ngModel)]="registerInfo.phone">
         <br>
         <div>
             <label for="">Vai trò</label>
@@ -59,13 +59,13 @@
     </div>
 </div>
 <mat-dialog-actions align="end" class="p-0 mt-2">
-    <button *ngIf="!isShowOtp" [disabled]="!registerForm.valid" class="btn btn-primary" type="submit" (click)="getOtp()"
+    <!-- <button *ngIf="!isShowOtp" [disabled]="!registerForm.valid" class="btn btn-primary" type="submit" (click)="getOtp()"
         style="height: 42px;">Lấy mã
         OTP</button>
     <button *ngIf="isShowOtp && !isShowRegister" class="btn btn-primary mr-2" type="submit" (click)="back()"
         style="height: 42px;">Quay lại</button>
     <button *ngIf="isShowOtp && !isShowRegister" [disabled]="!otpForm.valid" class="btn btn-primary" type="submit"
-        (click)="checkOTP()" style="height: 42px;">Xác thực mã OTP</button>
+        (click)="checkOTP()" style="height: 42px;">Xác thực mã OTP</button> -->
     <button *ngIf="isShowRegister" class="btn btn-primary mr-2" type="submit" (click)="register()" style="height: 42px;">Đăng
         ký</button>
     <button *ngIf="isShowRegister" mat-button [mat-dialog-close]="true" class="btn btn-danger-primary"
