--- a/src/app/modules/question-management/question-management.component.html
+++ b/src/app/modules/question-management/question-management.component.html
@@ -17,7 +17,7 @@
                         <td>{{item.message}}</td>
                         <td style="width: 70px">
                             <div class="d-flex justify-content-center">
-                                <button title="Trả lời" style="background: transparent; border: none;" (click)="openModalReply(item,'waiter')"><i
+                                <button title="Trả lời" style="background: transparent; border: none;" (click)="openModalReply(item,'Waiter')"><i
                                         style="font-size: 20px; color: #01904a;"
                                         class="fas fa-comment-dots"></i></button>
                             </div>
@@ -44,7 +44,7 @@
                         <td>{{item.message}}</td>
                         <td style="width: 70px">
                             <div class="d-flex justify-content-center">
-                                <button title="Trả lời" style="background: transparent; border: none;" (click)="openModalReply(item,'chef')"><i
+                                <button title="Trả lời" style="background: transparent; border: none;" (click)="openModalReply(item,'Chef')"><i
                                         style="font-size: 20px; color: #01904a;"
                                         class="fas fa-comment-dots"></i></button>
                             </div>
@@ -71,7 +71,7 @@
                         <td>{{item.message}}</td>
                         <td style="width: 70px">
                             <div class="d-flex justify-content-center">
-                                <button title="Trả lời" style="background: transparent; border: none;" (click)="openModalReply(item,'customer')"><i
+                                <button title="Trả lời" style="background: transparent; border: none;" (click)="openModalReply(item,'Customer')"><i
                                         style="font-size: 20px; color: #01904a;"
                                         class="fas fa-comment-dots"></i></button>
                             </div>
@@ -98,7 +98,7 @@
                         <td>{{item.message}}</td>
                         <td style="width: 70px">
                             <div class="d-flex justify-content-center">
-                                <button title="Trả lời" style="background: transparent; border: none;" (click)="openModalReply(item,'receptionist')"><i
+                                <button title="Trả lời" style="background: transparent; border: none;" (click)="openModalReply(item,'Receptionist')"><i
                                         style="font-size: 20px; color: #01904a;"
                                         class="fas fa-comment-dots"></i></button>
                             </div>
